--- a/core/templates/core/note_list.html
+++ b/core/templates/core/note_list.html
@@ -9,7 +9,6 @@
         <table class="table table-striped table-hover">
             <thead class="thead-inverse">
                 <tr>
-                    <th>#</th>
                     <th>Child</th>
                     <th>Note</th>
                     <th>Time</th>
@@ -19,8 +18,7 @@
             <tbody>
                 {% for note in object_list %}
                     <tr>
-                        <th scope="row">{{ note.id }}</th>
-                        <td>{{ note.child }}</td>
+                        <th scope="row">{{ note.child }}</th>
                         <td>{{ note.note }}</td>
                         <td>{{ note.time }}</td>
                         <td class="text-center">
@@ -43,7 +41,7 @@
                     </tr>
                 {% empty %}
                     <tr>
-                        <th colspan="5">No notes found.</th>
+                        <th colspan="4">No notes found.</th>
                     </tr>
                 {% endfor %}
             </tbody>
