--- a/core/templates/core/timer_list.html
+++ b/core/templates/core/timer_list.html
@@ -2,7 +2,7 @@
     <div class="card border-success text-center mb-2">
         <div class="card-header text-white bg-success ">{{ timer.name }}</div>
         <div class="card-body text-success">
-            <h4 class="card-text">{{ timer.duration }}</h4>
+            <h4 class="card-text">{{ timer.current_duration }}</h4>
         </div>
         <div class="card-footer text-muted small">
             {{ timer.start }}
