--- a/core/templates/core/sleep_list.html
+++ b/core/templates/core/sleep_list.html
@@ -1,5 +1,6 @@
 {% extends 'babyblotter/page.html' %}
 {% load widget_tweaks %}
+{% load timers %}
 
 {% block title %}Sleep{% endblock %}
 
@@ -22,7 +23,7 @@
                         <th scope="row">{{ sleep.child }}</th>
                         <td>{{ sleep.start }}</td>
                         <td>{{ sleep.end }}</td>
-                        <td>{{ sleep.duration }}</td>
+                        <td>{{ sleep.duration|duration_string }}</td>
                         <td class="text-center">
                             <div class="btn-group btn-group-sm" role="group" aria-label="Actions">
 
