Move duration tools to a separate template tag collection.

--- a/core/templates/core/feeding_list.html
+++ b/core/templates/core/feeding_list.html
@@ -1,6 +1,6 @@
 {% extends 'babyblotter/page.html' %}
 {% load widget_tweaks %}
-{% load timers %}
+{% load duration %}
 
 {% block title %}Feedings{% endblock %}
 
