Update the timer duration in real time on the timer detail page.

--- a/babyblotter/templates/babyblotter/base.html
+++ b/babyblotter/templates/babyblotter/base.html
@@ -15,6 +15,7 @@
 {% block page %}{% endblock %}
 
 <script src="{% static "babyblotter/js/vendor.js" %}"></script>
+<script src="{% static "babyblotter/js/app.js" %}"></script>
 {% block javascript %}{% endblock %}
 </body>
 </html>
