Refactor JS to use BabyBlotter as primary JS namespace.

--- a/core/templates/core/timer_detail.html
+++ b/core/templates/core/timer_detail.html
@@ -41,6 +41,6 @@
 
 {% block javascript %}
     <script type="application/javascript">
-        BBTimer.run('timer-status');
+        BabyBlotter.Timer.run('timer-status');
     </script>
 {% endblock %}
