Minor dashboard adjustments.

--- a/babyblotter/templates/babyblotter/nav-horizontal.html
+++ b/babyblotter/templates/babyblotter/nav-horizontal.html
@@ -13,7 +13,7 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item{% if request.path == '/' %} active{% endif %}">
-                    <a class="nav-link" href="{% url 'index' %}">
+                    <a class="nav-link" href="{% url 'dashboard' %}">
                         <i class="fa fa-dashboard" aria-hidden="true"></i> Dashboard
                     </a>
                 </li>
