Clarify last tummy time language on card.

--- a/dashboard/templates/cards/tummytime_day.html
+++ b/dashboard/templates/cards/tummytime_day.html
@@ -19,4 +19,4 @@
     </ul>
 {% endblock %}
 
-{% block footer %}Time since last: {{ last.end|timesince }}{% endblock %}
+{% block footer %}Last tummy time: {{ last.end|timesince }} ago{% endblock %}
