Initiate sass-based app style system.

--- a/babyblotter/templates/babyblotter/base.html
+++ b/babyblotter/templates/babyblotter/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{% block title %}{% endblock %} | Baby Blotter</title>
+    <link rel="stylesheet" href="{% static "babyblotter/css/app.min.css" %}" />
     <link rel="stylesheet" href="{% static "babyblotter/css/vendor.min.css" %}" />
 </head>
 <body style="padding-top: 5rem;">
