Replace inline CSS for diaper change types card and prepare for other sass styling.

--- a/dashboard/templates/cards/diaperchange.html
+++ b/dashboard/templates/cards/diaperchange.html
@@ -1,4 +1,4 @@
-<div class="card border-danger mb-3">
+<div class="card card-diaperchange border-danger mb-3">
     <div class="card-header text-white bg-danger h4">
         <i class="fa fa-trash pull-left" aria-hidden="true"></i>
         {% block header %}{% endblock %}
