--- a/dashboard/templates/cards/feeding.html
+++ b/dashboard/templates/cards/feeding.html
@@ -1,4 +1,4 @@
-<div class="card border-primary mb-3">
+<div class="card card-feeding border-primary mb-3">
     <div class="card-header text-white bg-primary h4">
         <i class="fa fa-spoon pull-left" aria-hidden="true"></i>
         {% block header %}{% endblock %}
