--- a/dashboard/templates/cards/tummytime.html
+++ b/dashboard/templates/cards/tummytime.html
@@ -1,4 +1,4 @@
-<div class="card border-success mb-3">
+<div class="card card-tummytime border-success mb-3">
     <div class="card-header text-white bg-success h4">
         <i class="fa fa-smile-o pull-left" aria-hidden="true"></i>
         {% block header %}{% endblock %}
