--- a/babyblotter/static_site/scss/babyblotter.scss
+++ b/babyblotter/static_site/scss/babyblotter.scss
@@ -1,4 +1,4 @@
-@import "../../../node_modules/bootstrap/scss/functions";
-@import "../../../node_modules/bootstrap/scss/variables";
+@import "functions";
+@import "variables";
 @import "custom";
 @import "../../../node_modules/bootstrap/scss/bootstrap";
