--- a/dashboard/templates/cards/sleep.html
+++ b/dashboard/templates/cards/sleep.html
@@ -1,4 +1,4 @@
-<div class="card border-dark mb-3">
+<div class="card card-sleep border-dark mb-3">
     <div class="card-header text-white bg-dark h4">
         <i class="fa fa-bed pull-left" aria-hidden="true"></i>
         {% block header %}{% endblock %}
