Adjust sass process for import globbing (to limit multiple imports).

--- a/babyblotter/static_site/scss/babyblotter.scss
+++ b/babyblotter/static_site/scss/babyblotter.scss
@@ -1,4 +1,7 @@
 @import "functions";
 @import "variables";
-@import "custom";
+@import "mixins";
+@import "global";
 @import "../../../node_modules/bootstrap/scss/bootstrap";
+
+@import "../../../**/static/scss/*.scss";
