Make the timer display smaller on small devices.

--- a/core/templates/core/timer_detail.html
+++ b/core/templates/core/timer_detail.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div class="jumbotron text-center">
-        <h1 id="timer-status" class="display-1">
+        <h1 id="timer-status">
             <span class="timer-hours">{{ object.current_duration|hours }}</span>h
             <span class="timer-minutes">{{ object.current_duration|minutes }}</span>m
             <span class="timer-seconds">{{ object.current_duration|seconds }}</span>s
