Make the dashboard cards layout more opinionated.
This puts all the "last" cards in one row consistently, assuming that the tummy time and diaper change cards should always have fairly large heights. The shifting heights were causing cards to appear in different places with the masonry setup.

--- a/dashboard/templates/cards/diaperchange_types.html
+++ b/dashboard/templates/cards/diaperchange_types.html
@@ -3,7 +3,7 @@
 {% block header %}Diaper Changes{% endblock %}
 
 {% block title %}
-    <strong>Past 5 Days</strong>
+    <strong>Past Week</strong>
 {% endblock %}
 
 {% block content %}
