--- a/babyblotter/static_site/scss/_variables.scss
+++ b/babyblotter/static_site/scss/_variables.scss
@@ -1,4 +1,4 @@
-@import "functions";
-@import "../../../node_modules/bootstrap/scss/variables";
+@import 'functions';
+@import '../../../node_modules/bootstrap/scss/variables';
 
-/* Baby Blotter site-wide custom variables. */
+// Baby Blotter site-wide custom variables. */
