--- a/babyblotter/static_site/scss/_functions.scss
+++ b/babyblotter/static_site/scss/_functions.scss
@@ -1,3 +1,3 @@
-@import "../../../node_modules/bootstrap/scss/functions";
+@import '../../../node_modules/bootstrap/scss/functions';
 
-/* Baby Blotter site-wide custom functions. */
+// Baby Blotter site-wide custom functions.
