--- a/babyblotter/static_site/scss/_mixins.scss
+++ b/babyblotter/static_site/scss/_mixins.scss
@@ -1,3 +1,3 @@
-@import "../../../node_modules/bootstrap/scss/mixins";
+@import '../../../node_modules/bootstrap/scss/mixins';
 
-/* Baby Blotter site-wide custom mixins. */
+// Baby Blotter site-wide custom mixins.
