Continue initial attempt at sleep graph (WIP).

--- a/reports/templates/reports/sleep.html
+++ b/reports/templates/reports/sleep.html
@@ -7,42 +7,54 @@
         Sleep report for {{ object }}.
     </div>
 
-    <div class="pull-left p-1">
-        <strong>8 Aug</strong>
+    <pre>{{ stats|pprint }}</pre>
+
+    <div class="row">
+        <div class="col-md-1 d-flex align-self-center">
+            Tuesday, 22 Aug.
+        </div>
+        <div class="col-md-11">
+            <div class="progress" style="height: 32px; border-radius: 0;">
+                <div class="progress-bar" role="progressbar" style="width: 5%; background: none;"></div>
+                <div class="progress-bar bg-info" role="progressbar" style="width: 2%"></div>
+                <div class="progress-bar" role="progressbar" style="width: 15%; background: none;"></div>
+                <div class="progress-bar bg-info" role="progressbar" style="width: 6%"></div>
+                <div class="progress-bar" role="progressbar" style="width: 3%; background: none;"></div>
+                <div class="progress-bar bg-info" role="progressbar" style="width: 10%"></div>
+                <div class="progress-bar" role="progressbar" style="width: 5%; background: none;"></div>
+                <div class="progress-bar bg-info" role="progressbar" style="width: 2%"></div>
+                <div class="progress-bar" role="progressbar" style="width: 15%; background: none;"></div>
+                <div class="progress-bar bg-info" role="progressbar" style="width: 6%"></div>
+                <div class="progress-bar" role="progressbar" style="width: 3%; background: none;"></div>
+                <div class="progress-bar bg-info" role="progressbar" style="width: 10%"></div>
+                <div class="progress-bar" role="progressbar" style="width: 8%; background: none;"></div>
+                <div class="progress-bar bg-info" role="progressbar" style="width: 10%"></div>
+            </div>
+        </div>
     </div>
-    <div class="progress" style="height: 32px; border-radius: 0;">
-        <div class="progress-bar" role="progressbar" style="width: 5%; background: none;"></div>
-        <div class="progress-bar bg-info" role="progressbar" style="width: 2%"></div>
-        <div class="progress-bar" role="progressbar" style="width: 15%; background: none;"></div>
-        <div class="progress-bar bg-info" role="progressbar" style="width: 6%"></div>
-        <div class="progress-bar" role="progressbar" style="width: 3%; background: none;"></div>
-        <div class="progress-bar bg-info" role="progressbar" style="width: 10%"></div>
-        <div class="progress-bar" role="progressbar" style="width: 5%; background: none;"></div>
-        <div class="progress-bar bg-info" role="progressbar" style="width: 2%"></div>
-        <div class="progress-bar" role="progressbar" style="width: 15%; background: none;"></div>
-        <div class="progress-bar bg-info" role="progressbar" style="width: 6%"></div>
-        <div class="progress-bar" role="progressbar" style="width: 3%; background: none;"></div>
-        <div class="progress-bar bg-info" role="progressbar" style="width: 10%"></div>
-        <div class="progress-bar" role="progressbar" style="width: 8%; background: none;"></div>
-        <div class="progress-bar bg-info" role="progressbar" style="width: 10%"></div>
+
+    <div class="row">
+        <div class="col-md-1">
+            Monday, 21 Aug.
+        </div>
+        <div class="col-md-11">
+            <div class="progress" style="height: 32px; border-radius: 0;">
+                <div class="progress-bar" role="progressbar" style="width: 5%; background: none;"></div>
+                <div class="progress-bar bg-info" role="progressbar" style="width: 2%"></div>
+                <div class="progress-bar" role="progressbar" style="width: 3%; background: none;"></div>
+                <div class="progress-bar bg-info" role="progressbar" style="width: 10%"></div>
+                <div class="progress-bar" role="progressbar" style="width: 5%; background: none;"></div>
+                <div class="progress-bar bg-info" role="progressbar" style="width: 2%"></div>
+                <div class="progress-bar" role="progressbar" style="width: 15%; background: none;"></div>
+                <div class="progress-bar bg-info" role="progressbar" style="width: 6%"></div>
+                <div class="progress-bar" role="progressbar" style="width: 3%; background: none;"></div>
+                <div class="progress-bar bg-info" role="progressbar" style="width: 10%"></div>
+                <div class="progress-bar" role="progressbar" style="width: 8%; background: none;"></div>
+                <div class="progress-bar bg-info" role="progressbar" style="width: 10%"></div>
+                <div class="progress-bar" role="progressbar" style="width: 15%; background: none;"></div>
+                <div class="progress-bar bg-info" role="progressbar" style="width: 6%"></div>
+            </div>
+        </div>
     </div>
-    <div class="pull-left p-1">
-        <strong>7 Aug</strong>
-    </div>
-    <div class="progress" style="height: 32px; border-radius: 0;">
-        <div class="progress-bar" role="progressbar" style="width: 5%; background: none;"></div>
-        <div class="progress-bar bg-info" role="progressbar" style="width: 2%"></div>
-        <div class="progress-bar" role="progressbar" style="width: 3%; background: none;"></div>
-        <div class="progress-bar bg-info" role="progressbar" style="width: 10%"></div>
-        <div class="progress-bar" role="progressbar" style="width: 5%; background: none;"></div>
-        <div class="progress-bar bg-info" role="progressbar" style="width: 2%"></div>
-        <div class="progress-bar" role="progressbar" style="width: 15%; background: none;"></div>
-        <div class="progress-bar bg-info" role="progressbar" style="width: 6%"></div>
-        <div class="progress-bar" role="progressbar" style="width: 3%; background: none;"></div>
-        <div class="progress-bar bg-info" role="progressbar" style="width: 10%"></div>
-        <div class="progress-bar" role="progressbar" style="width: 8%; background: none;"></div>
-        <div class="progress-bar bg-info" role="progressbar" style="width: 10%"></div>
-        <div class="progress-bar" role="progressbar" style="width: 15%; background: none;"></div>
-        <div class="progress-bar bg-info" role="progressbar" style="width: 6%"></div>
-    </div>
+
 {% endblock %}
